--- a/pulsar-client/pom.xml
+++ b/pulsar-client/pom.xml
@@ -85,6 +85,13 @@
          </exclusion>
       </exclusions>
     </dependency>
+    
+    <!-- httpclient uses it for logging --> 
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
 
   </dependencies>
 
