--- a/pulsar-testclient/pom.xml
+++ b/pulsar-testclient/pom.xml
@@ -25,7 +25,7 @@
 	<parent>
 		<groupId>org.apache.pulsar</groupId>
 		<artifactId>pulsar</artifactId>
-		<version>1.22.0-incubating-SNAPSHOT</version>
+		<version>1.22.0-incubating</version>
 		<relativePath>..</relativePath>
 	</parent>
 
