--- a/pulsar-zookeeper-utils/pom.xml
+++ b/pulsar-zookeeper-utils/pom.xml
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
-      <artifactId>bookkeeper-server</artifactId>
+      <artifactId>bookkeeper-server-shaded</artifactId>
       <version>${bookkeeper.version}</version>
       <exclusions>
         <exclusion>
