--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -38,6 +38,10 @@ webServicePort=8080
 # Port to use to server HTTPS request
 webServicePortTls=8443
 
+# Path for the file used to determine the rotation status for the proxy-instance when responding
+# to service discovery health checks
+statusFilePath=
+
 ### --- Authentication --- ###
 
 # Enable authentication
