Addressed Matteo's PR Comments

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -234,6 +234,7 @@ superUserRoles=
 # either in same or other clusters
 brokerClientAuthenticationPlugin=
 brokerClientAuthenticationParameters=
+brokerClientTrustCertsFilePath=
 
 # Supported Athenz provider domain names(comma separated) for authentication
 athenzDomainNames=
