--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -55,6 +55,7 @@ authorizationProvider=org.apache.pulsar.broker.authorization.PulsarAuthorization
 # Authentication settings of the proxy itself. Used to connect to brokers
 brokerClientAuthenticationPlugin=
 brokerClientAuthenticationParameters=
+brokerClientTrustCertsFilePath=
 
 # Role names that are treated as "super-user", meaning they will be able to do all admin
 # operations and publish/consume from all topics (comma-separated)
