--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -78,6 +78,7 @@ superUserRoles=
 # Authentication settings of the proxy itself. Used to connect to brokers
 brokerClientAuthenticationPlugin=
 brokerClientAuthenticationParameters=
+brokerClientTrustCertsFilePath=
 
 # When this parameter is not empty, unauthenticated users perform as anonymousUserRole
 anonymousUserRole=
