--- a/pulsar-common/pom.xml
+++ b/pulsar-common/pom.xml
@@ -48,6 +48,7 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
+      <version>2.4.1</version>
     </dependency>
 
     <dependency>
