Fix version parameter

--- a/pom.xml
+++ b/pom.xml
@@ -385,13 +385,13 @@ flexible messaging model and an intuitive client API.</description>
       <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-multipart</artifactId>
-        <version>${jersery.version}</version>
+        <version>${jersey.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.glassfish.jersey.inject</groupId>
         <artifactId>jersey-hk2</artifactId>
-        <version>${jersery.version}</version>
+        <version>${jersey.version}</version>
       </dependency>
 
       <dependency>
