--- a/pulsar-proxy/pom.xml
+++ b/pulsar-proxy/pom.xml
@@ -86,6 +86,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
       <artifactId>jackson-jaxrs-json-provider</artifactId>
     </dependency>
