Mavenize docker images (#1284)
* Mavenize docker images

Build pulsar docker images with maven. This will make it easier to
pull them in as a base for the maven integration tests.

I didn't touch the publish script, because it has handling for private
registries which I wasn't able to test.

* Fix licenses

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -128,7 +128,7 @@
               <goal>single</goal>
             </goals>
             <configuration>
-              <attach>false</attach>
+              <attach>true</attach>
               <tarLongFileMode>posix</tarLongFileMode>
               <finalName>apache-pulsar-${project.version}</finalName>
               <descriptors>
@@ -138,6 +138,13 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
