update docs with --user=ec2-user flag

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ deployment/terraform-ansible/deploy-pulsar.retry
 deployment/terraform-ansible/aws/.terraform/
 deployment/terraform-ansible/aws/.terraform.tfstate.lock.info
 deployment/terraform-ansible/aws/terraform.tfstate
+deployment/terraform-ansible/aws/terraform.tfstate.backup
