revert changes to .service files

--- a/deployment/terraform-ansible/templates/bookkeeper.service
+++ b/deployment/terraform-ansible/templates/bookkeeper.service
@@ -18,11 +18,11 @@
 #
 
 [Unit]
-Description=Pulsar Broker
+Description=Bookkeeper
 After=network.target
 
 [Service]
-ExecStart=/opt/pulsar/bin/pulsar broker
+ExecStart=/opt/pulsar/bin/pulsar bookie
 WorkingDirectory=/opt/pulsar
 RestartSec=1s
 Restart=on-failure
