Fix Terraform/Ansible docs (#1290)
* remove separate BK systemd service

* add tfvars file, reformat terraform configs, and update docs

* update docs with --user=ec2-user flag

* fix jq command in docs

* update pulsar version in ansible playbook config

* revert changes to .service files

* revert ansible config

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ generated-site/
 
 # Ansible and Terraform artifacts
 deployment/terraform-ansible/deploy-pulsar.retry
-deployment/terraform-ansible/aws/terraform*
 deployment/terraform-ansible/aws/.terraform/
 deployment/terraform-ansible/aws/.terraform.tfstate.lock.info
+deployment/terraform-ansible/aws/terraform.tfstate
+deployment/terraform-ansible/aws/terraform.tfstate.backup
