--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -22,14 +22,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
-    <version>2.0.0-incubating-SNAPSHOT</version>
-    <relativePath>..</relativePath>
-  </parent>
-
+  <groupId>org.apache.pulsar</groupId>
   <artifactId>buildtools</artifactId>
+  <version>2.0.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Pulsar Build Tools</name>
 
@@ -37,6 +32,7 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
+      <version>6.13.1</version>
     </dependency>
   </dependencies>
 
