--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -207,6 +207,11 @@ tlsTrustCertsFilePath=
 # Accept untrusted TLS certificate from client
 tlsAllowInsecureConnection=false
 
+# Specify whether Client certificates are required for TLS
+# https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
+# Acceptable values:- [NONE, OPTIONAL, REQUIRE]
+# Default Value:- OPTIONAL
+tlsClientAuth=OPTIONAL;
 ### --- Authentication --- ###
 
 # Enable authentication
