--- a/conf/discovery.conf
+++ b/conf/discovery.conf
@@ -73,3 +73,10 @@ tlsCertificateFilePath=
 
 # Path for the TLS private key file
 tlsKeyFilePath=
+
+# Specify whether Client certificates are required for TLS
+# https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
+# Acceptable values:- [NONE, OPTIONAL, REQUIRE]
+# Default Value:- OPTIONAL
+tlsClientAuth=OPTIONAL;
+
