--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -85,3 +85,10 @@ tlsKeyFilePath=
 
 # Validates hostname when proxy creates tls connection with broker
 tlsHostnameVerificationEnabled=false
+
+# Specify whether Client certificates are required for TLS
+# https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
+# Acceptable values:- [NONE, OPTIONAL, REQUIRE]
+# Default Value:- OPTIONAL
+tlsClientAuth=OPTIONAL;
+
