--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -36,4 +36,16 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>3.0.rc1</version>
+        <configuration>
+          <header>../src/license-header.txt</header>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
