--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -22,14 +22,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
-    <version>2.0.0-incubating-SNAPSHOT</version>
-    <relativePath>..</relativePath>
-  </parent>
-
+  <groupId>org.apache.pulsar</groupId>
   <artifactId>buildtools</artifactId>
+  <version>2.0.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Pulsar Build Tools</name>
 
@@ -37,7 +32,20 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
+      <version>6.13.1</version>
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>3.0.rc1</version>
+        <configuration>
+          <header>../src/license-header.txt</header>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
