--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -243,6 +243,12 @@
       <version>${bookkeeper.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
