Replace pulsar-checksum module with circe-checksum from BK

--- a/pulsar-client-tools-shaded/pom.xml
+++ b/pulsar-client-tools-shaded/pom.xml
@@ -60,7 +60,7 @@
               <artifactSet>
                 <includes>
                   <include>org.apache.pulsar:pulsar-common</include>
-                  <include>org.apache.pulsar:pulsar-checksum</include>
+                  <include>org.apache.bokkeeper:circe-checksum</include>
                   <include>org.apache.pulsar:pulsar-client-original</include>
                   <include>org.apache.pulsar:pulsar-client-admin-original</include>
                   <include>org.apache.pulsar:pulsar-client-tools</include>
@@ -102,7 +102,7 @@
                   </includes>
                 </filter>
                 <filter>
-                  <artifact>org.apache.pulsar:pulsar-checksum</artifact>
+                  <artifact>org.apache.bookkeeper:circe-checksum</artifact>
                   <includes>
                     <include>**</include>
                   </includes>
