--- a/conf/discovery.conf
+++ b/conf/discovery.conf
@@ -78,5 +78,5 @@ tlsKeyFilePath=
 # https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
 # Acceptable values:- [NONE, OPTIONAL, REQUIRE]
 # Default Value:- OPTIONAL
-tlsClientAuth=OPTIONAL;
+tlsClientAuth=OPTIONAL
 
