--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -90,5 +90,5 @@ tlsHostnameVerificationEnabled=false
 # https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
 # Acceptable values:- [NONE, OPTIONAL, REQUIRE]
 # Default Value:- OPTIONAL
-tlsClientAuth=OPTIONAL;
+tlsClientAuth=OPTIONAL
 
