Switched to BookKeeper-4.7.0-SNAPSHOT + Adjustements (#1292)
* Switched to BookKeeper-4.7.0-SNAPSHOT + Adjustements

* Added some missing operations to GrowableArrayBlockingQueue

Managed ledger was using UnboundedArrayBlockingQueue from yahoo/bookkeeper branch.

* Removed mock BK classes that are now in BK itself

* Fixed flaky test after refactoring

* Fixed some other tests

* One more flaky test

* Added bk tests dependency to pulsar-client-tools

--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -226,11 +226,31 @@
     </dependency>
 
     <dependency>
+      <groupId>com.carrotsearch</groupId>
+      <artifactId>hppc</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>buildtools</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.bookkeeper</groupId>
+      <artifactId>bookkeeper-server</artifactId>
+      <version>${bookkeeper.version}</version>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
   </dependencies>
 
   <build>
