--- a/pom.xml
+++ b/pom.xml
@@ -606,6 +606,7 @@ flexible messaging model and an intuitive client API.</description>
       <groupId>org.apache.pulsar</groupId>
       <artifactId>buildtools</artifactId>
       <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
