--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -57,6 +57,7 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
+      <version>2.4.1</version>
     </dependency>
 
     <dependency>
