Addressed Matteo's PR review Comments

--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -87,8 +87,5 @@ tlsKeyFilePath=
 tlsHostnameVerificationEnabled=false
 
 # Specify whether Client certificates are required for TLS
-# https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
-# Acceptable values:- [NONE, OPTIONAL, REQUIRE]
-# Default Value:- OPTIONAL
-tlsClientAuth=OPTIONAL
-
+# Reject the Connection if the Client Certificate is not trusted.
+tlsReqTrustedClientCertOnConnect=false
