--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -208,10 +208,8 @@ tlsTrustCertsFilePath=
 tlsAllowInsecureConnection=false
 
 # Specify whether Client certificates are required for TLS
-# https://netty.io/4.0/api/io/netty/handler/ssl/ClientAuth.html
-# Acceptable values:- [NONE, OPTIONAL, REQUIRE]
-# Default Value:- OPTIONAL
-tlsClientAuth=OPTIONAL
+# Reject the Connection if the Client Certificate is not trusted.
+tlsReqTrustedClientCertOnConnect=false
 ### --- Authentication --- ###
 
 # Enable authentication
