Properly detect debug vs release libraries to link against

--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -76,12 +76,26 @@ endif(NOT LOG_CATEGORY_NAME)
 
 add_definitions(-DLOG_CATEGORY_NAME=${LOG_CATEGORY_NAME} -DBUILDING_PULSAR -DBOOST_ALL_NO_LIB -DBOOST_ALLOW_DEPRECATED_HEADERS)
 
+MACRO(composeLibraryList LIBRARIES DEBUG_LIBRARIES)
+    IF (${DEBUG_LIBRARIES})
+        SET(${LIBRARIES} "optimized" ${${LIBRARIES}} "debug" ${${DEBUG_LIBRARIES}})
+    ENDIF()
+ENDMACRO()
+
 if (LINK_STATIC)
-    find_library(ZLIB_LIBRARIES REQUIRED NAMES libz.a z zlib)
-    find_library(Protobuf_LITE_LIBRARIES NAMES libprotobuf-lite.a libprotobuf-lite)
-    find_library(CURL_LIBRARIES NAMES libcurl.a curl curl_a libcurl_a)
+    find_library(ZLIB_LIBRARIES REQUIRED NAMES libz.a z zlibstatic zlib)
+    find_library(ZLIB_DEBUG_LIBRARIES NAMES zlibstaticd zlibd)
+    find_library(Protobuf_LITE_LIBRARIES REQUIRED NAMES libprotobuf-lite.a libprotobuf-lite)
+    find_library(Protobuf_LITE_DEBUG_LIBRARIES NAMES libprotobuf-lited)
+    find_library(CURL_LIBRARIES NAMES curl_a libcurl_a libcurl.a curl)
+    find_library(CURL_DEBUG_LIBRARIES NAMES curl_a_debug libcurl_a_debug)
     find_library(LIB_ZSTD NAMES libzstd.a)
     find_library(LIB_SNAPPY NAMES libsnappy.a)
+
+    
+    composeLibraryList(ZLIB_LIBRARIES ZLIB_DEBUG_LIBRARIES)
+    composeLibraryList(Protobuf_LITE_LIBRARIES Protobuf_LITE_DEBUG_LIBRARIES)
+    composeLibraryList(CURL_LIBRARIES CURL_DEBUG_LIBRARIES)
 
     if (USE_LOG4CXX)
         if (LOG4CXX_USE_DYNAMIC_LIBS)
@@ -119,6 +133,8 @@ else()
         find_package(ProtoBuf QUIET)
         if (NOT Protobuf_FOUND OR NOT Protobuf_LITE_LIBRARIES)
             find_library(Protobuf_LITE_LIBRARIES protobuf-lite libprotobuf-lite)
+            find_library(Protobuf_LITE_DEBUG_LIBRARIES protobuf-lited libprotobuf-lited)
+            composeLibraryList(Protobuf_LITE_LIBRARIES Protobuf_LITE_DEBUG_LIBRARIES)
             find_path(Protobuf_INCLUDE_DIRS google/protobuf/stubs/common.h)
         endif()
     endif (NOT PROTOBUF_LIBRARIES)
@@ -126,6 +142,8 @@ else()
     find_library(LIB_ZSTD zstd)
     find_library(LIB_SNAPPY NAMES snappy libsnappy)
     find_library(CURL_LIBRARIES NAMES curl libcurl)
+    find_library(CURL_DEBUG_LIBRARIES NAMES curl_debug libcurl_debug)
+    composeLibraryList(CURL_LIBRARIES CURL_DEBUG_LIBRARIES)
 
     if (USE_LOG4CXX)
         find_library(LOG4CXX_LIBRARY_PATH log4cxx)
